Fix squished icons on narrative pages

--- a/layout/value-chains/content/step-details/_styles.scss
+++ b/layout/value-chains/content/step-details/_styles.scss
@@ -26,6 +26,10 @@
         display: flex;
         flex-direction: row;
 
+        .c-step-icon {
+            flex: 1 0 auto;
+        }
+
         h3 {
             line-height: 38px;
         }
